--- a/css/estilos.css
+++ b/css/estilos.css
@@ -462,7 +462,7 @@
   }
 }
 
-/*ESTILO HOJA*/
+/*ESTILO HOJAS*/
 
 .primeraCaja{
   display: block;
@@ -471,8 +471,8 @@
   height: calc(100vh - 5rem);
   max-height: 700px;
   min-height: 240px;
-  background: radial-gradient(circle, rgba(140,123,115,1) 0%, rgba(97,75,62,1) 100%);
-  /*background: url(../archivos/videoInicio2.PNG);*/
+  /*background: radial-gradient(circle, rgba(140,123,115,1) 0%, rgba(97,75,62,1) 100%);*/
+  background: url(../archivos/videoInicio2.PNG);
   background-size: cover;
 
 }
@@ -482,7 +482,7 @@
   font-size: 90px;
   font-weight: 600;
   color: #fff;
-  /*color: #5d2904;*/
+  color: #5d2904;
 }
 
 .cajaFondo{
