puse un <a> al Bienvenidos del inicio

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,6 +36,15 @@
   }
 }
 
+.noDecoracion, h1 a, a:hover{
+  text-decoration: none;
+  color: #000;
+}
+
+h1 a:hover{
+  color: #5d2904;
+}
+
 /*BOTON DE MENU RESPONSIVE*/
 
 .navbar-dark .navbar-toggler{
